fix for ui overflow

--- a/app/css/kittenblock.css
+++ b/app/css/kittenblock.css
@@ -10,6 +10,7 @@
 
 body{
     background-color: #E9EEF2;
+    overflow: hidden;
 }
 
 .editor-tabs>li>a
